Fix background image so text is readable

--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -3,5 +3,5 @@ li a {
 }
 
 body {
-    background: white url("images/background.gif") no-repeat;
+    background: white url("images/background.jpg") repeat;
 }
